[gd_scene load_steps=10 format=2]

[ext_resource path="res://Bosses/Boxer/Boxer.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10, 10.8067 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=7]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Boss" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="1"]

frames = SubResource( 2 )
animation = "default"

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
blend_times = [  ]

[node name="Right" type="KinematicBody2D" parent="." index="3"]

position = Vector2( -62.4832, 62.4831 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Right" index="0"]

position = Vector2( -1.4702, -1.52588e-05 )
frames = SubResource( 3 )
animation = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right" index="1"]

position = Vector2( -1.4702, 0.735092 )
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="Right" index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right/Area2D" index="0"]

position = Vector2( -1.5448, -0.219799 )
scale = Vector2( 2.94038, 3.2231 )
shape = SubResource( 5 )

[node name="Left" type="KinematicBody2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 64.6883, 63.9532 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left" index="0"]

position = Vector2( -1.47002, -5.14558 )
shape = SubResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Left" index="1"]

position = Vector2( -2.94037, -5.88075 )
frames = SubResource( 7 )
animation = "default"

[node name="Timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Timer2" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[connection signal="body_entered" from="Right/Area2D" to="." method="_on_Right_body_entered"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]


